--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Zhenjia Zhou / Software engineer"
+title                    : "Zhenjia Zhou / Software Engineer"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description ""
@@ -22,10 +22,10 @@ repository               : "lifeodyssey/lifeodyssey.github.io/portfolio"
 author:
   # Biographic information
   avatar           : "profile.jpg"
-  name             : "Your Sidebar Name"
+  name             : "Zhenjia Zhou"
   pronouns         : "she/he"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
+  bio              : "Software Engineer/Ocean Color Remote Sensing/Nikoner"
+  location         : "Chengdu, Sichuan, China"
   employer         : "ThoughtWorks"
   uri              : # URL
   email            : "zhenjiazhou0127@outlook.com" 
