--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 locale                   : "en-US"
 title                    : "Zhenjia Zhou / Software Engineer"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Zhenjia Zhou"
 description              : &description ""
 url                      : https://lifeodyssey.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "portfolio" # the subpath of your site, e.g. "/blog"
