--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,20 +3,15 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Software Engineering"
+    url: /software-engineering/    
     
   - title: "Portfolio"
     url: /portfolio/
         
   - title: "Blog Posts"
-    url: /year-archive/
+    url: "https://lifeodyssey.github.io/"
     
   - title: "CV"
-    url: /cv/
+    url: "https://lifeodyssey.github.io/online-cv/"
     
-  - title: "Guide"
-    url: /markdown/
