--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /research/
 
   - title: "Software Engineering"
-    url: /software-engineering/    
+    url: /software_engineering/    
     
   # - title: "Portfolio"
   #   url: /portfolio/
